<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.seitenbau.serviceportal</groupId>
  <artifactId>prozess-scripting-api</artifactId>
  <version>1.211.7</version>
  <packaging>jar</packaging>

  <name>prozess-scripting-api</name>
  <description>Prozess Scripting API</description>
  <url>https://github.com/OZG-Hub/prozess-scripting-api</url>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <!-- https://central.sonatype.org/publish/requirements/#developer-information -->
  <developers>
    <developer>
      <name>Serviceportale Prozessplattform</name>
      <email>serviceportal-prozesse@seitenbau.com</email>
      <organization>SEITENBAU GmbH</organization>
      <organizationUrl>https://www.seitenbau.com/</organizationUrl>
    </developer>
  </developers>

  <!-- https://central.sonatype.org/publish/requirements/#scm-information -->
  <scm>
    <connection>scm:git:https://github.com/OZG-Hub/prozess-scripting-api.git</connection>
    <developerConnection>scm:git:ssh://github.com:OZG-Hub/prozess-scripting-api.git
    </developerConnection>
    <url>https://github.com/OZG-Hub/prozess-scripting-api/tree/main</url>
  </scm>

  <!-- https://central.sonatype.org/publish/publish-portal-snapshots/#publishing-via-other-methods -->
  <distributionManagement>
    <snapshotRepository>
      <id>central</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.build.outputTimestamp>2026-02-27T00:00:00Z</project.build.outputTimestamp>
    <spotbugs.excludeFilterFile>${basedir}/src/main/plugin-config/findbugs-exclude.xml
    </spotbugs.excludeFilterFile>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
    <lombok.version>1.18.46</lombok.version>
    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
    <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
    <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
    <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
    <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
    <jackson-annotations.version>2.22</jackson-annotations.version>
    <jackson-databind.version>2.22.0</jackson-databind.version>
    <jakarta.version>4.0.0</jakarta.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok-maven-plugin</artifactId>
        <version>${lombok-maven-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>delombok</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>delombok</goal>
            </goals>
            <configuration>
              <sourceDirectory>src/main/lombok</sourceDirectory>
              <outputDirectory>src/main/java</outputDirectory>
              <addOutputDirectory>false</addOutputDirectory>
              <formatPreferences>
                <javaLangAsFQN>skip</javaLangAsFQN>
              </formatPreferences>
              <verbose>false</verbose>
            </configuration>
          </execution>
          <execution>
            <id>test-delombok</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>testDelombok</goal>
            </goals>
            <configuration>
              <verbose>true</verbose>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- https://central.sonatype.org/publish/publish-maven/#javadoc-and-sources-attachments -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- https://central.sonatype.org/publish/publish-maven/#gpg-signed-components -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${maven-gpg-plugin.version}</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <!-- https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md-->
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>${central-publishing-maven-plugin.version}</version>
        <extensions>true</extensions>
        <configuration>
          <autoPublish>true</autoPublish>
          <deploymentName>prozess-scripting-api</deploymentName>
          <outputDirectory>prozess-scripting-api</outputDirectory>
          <outputFilename>prozess-scripting-api.zip</outputFilename>
          <waitUntil>published</waitUntil>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>${jakarta.validation-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson-annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>${jakarta.version}</version>
    </dependency>
  </dependencies>
</project>
